<?xml version="1.0"?>
<package format="2">
  <name>rbiz_autorace_msgs</name>
  <version>1.0.0</version>
  <description>The autorace_msgs package</description>
  <maintainer email="noetic@todo.todo">noetic</maintainer>
  <license>Apache 2.0</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
